exports[`markAsContacted should return an action 1`] = `
Object {
  "friend": Object {
    "name": "Bob",
  },
  "type": "MARK_AS_CONTACTED",
}
`;

exports[`updateFriend should return an action 1`] = `
Object {
  "friend": Object {
    "name": "Bob",
  },
  "type": "UPDATE_FRIEND",
}
`;
